# TMS

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_BASE_10387.txt  CMakeLists_LOCAL_10387.txt  CMakeLists_REMOTE_10387.txt  Doxyfile  README.md  README.txt  matrix.h  new_operator
Cadik08/: RGB_Gamma.cpp.bak  TMOCadik08.cpp  TMOCadik08.h  TMOColor2Gray.cpp  TMOColor2Gray.h  TMOPlugin.cpp  TMOPlugin.h  catam.h  ccatsl21a.h
Son14/: CMakeLists.txt
TMO2scaleToneManagement/: CMakeLists.txt  TMO2scaleToneManagement.cpp  TMO2scaleToneManagement.h  TMOPlugin.cpp
TMOAlsam06/: CMakeLists.txt  TMOAlsam06.cpp  TMOAlsam06.h  TMOPlugin.cpp
TMOAlsam09/: CMakeLists.txt  TMOAlsam09.cpp  TMOAlsam09.h  TMOPlugin.cpp
TMOAlsam20/: CMakeLists.txt  TMOAlsam20.cpp  TMOAlsam20.h  TMOPlugin.cpp
TMOAmbalathankandy21/: CMakeLists.txt  TMOAmbalathankandy21.cpp  TMOAmbalathankandy21.h  TMOPlugin.cpp
TMOAncuti10/: CMakeLists.txt  TMOAncuti10.cpp  TMOAncuti10.h  TMOPlugin.cpp
TMOAncuti11/: CMakeLists.txt  TMOAncuti11.cpp  TMOAncuti11.h  TMOPlugin.cpp
TMOAncuti16/: CMakeLists.txt  CMakeLists.txt~  Makefile  TMOAncuti16.cpp  TMOAncuti16.h  TMOPlugin.cpp  cmake_install.cmake
TMOAncuti19/: CMakeLists.txt  TMOAncuti19.cpp  TMOAncuti19.h  TMOPlugin.cpp  TMOYourOperatorName.cpp  TMOYourOperatorName.h  ica_model.yml  train_ICA.py
TMOAncuti19/train_ICA/: Makefile  README.md  train_ICA.cpp
TMOAubry14/: CMakeLists.txt  FastLocalLaplFilt.cpp  FastLocalLaplFilt.h  TMOAubry14.cpp  TMOAubry14.h  TMOPlugin.cpp
TMOAydin14/: CMakeLists.txt  TMOAydin14.cpp  TMOAydin14.h  TMOPlugin.cpp
TMOBae06/: CMakeLists.txt  TMOBae06.cpp  TMOBae06.h  TMOPlugin.cpp
TMOBiswas05/: CMakeLists.txt  TMOBiswas05.cpp  TMOBiswas05.h  TMOPlugin.cpp
TMOCLAHE/: CMakeLists.txt  TMOCLAHE.cpp  TMOCLAHE.h  TMOPlugin.cpp  clahe.cpp  clahe.h
TMOCadik08/: CMakeLists.txt  COLOR_GRAY_UNIF.txt  Coloroid.txt  GOLOR2GRAY_datae.txt  LIGHTD65.TXT  README  TMOCadik08.cpp  TMOCadik08.h  TMOColor2Gray-Lab_formula.txt  TMOPlugin.cpp  TMOPlugin.h  coloroid.cpp  coloroid.h  coloroid_datae.txt  light_A.txt  morton.cpp  morton.h  quadtree.cpp  quadtree.h  spacefill.cpp  spacefill.h  vec.h
TMOCadik08/Laszlo/: A_T_V1_V3_background.txt  Alapszin.c  BASIC_COLORS.txt  BMP_.h  Bartos.txt  Bartos_sRGB.txt  CIE_1931_1_A_fi.txt  CIMLAP_65  CIMLAP_70  COLOROID.h  COLOROID_SZINKOR_Y_60.txt  COLOROID_SZINKOR_Y_70.txt  Coloroid_1_alaptablazat.txt  Coloroid_2_lambda_A_fi_tablazat.txt  DICHROM.txt  HARMONIC_HUE_NUMERS.txt  Kor_Y_60.txt  Kor_Y_70.txt  MAX_PIGMENT_T  NEW_HARMONY  Nemcsics_d.txt  Planck_series.txt  RGB_Gamma.h  Szinesbol szurkebe - korrigalt alapadatok.txt  UNIFORM_SERIES  XYZ_for_different_lights.txt  Xyz31_1.txt  _Selected_Heights.txt  _Selected_Heights_256_pseudo_coloring.txt  _Selected_Heights_test.txt  _UNIFORM_SERIES_FI_T_V  all.txt  basic_color.txt  basic_colors_53.txt  classic_transformations.h  csont_hus.txt  csont_hus_density.txt  dither.h  egyes  fenyforrasok.txt  (+14 more)
TMOCadik08/common/: error.h  error.inl  loader.h  loader.inl  math.h  math.inl  text_loader.h  text_loader.inl
TMOCadik08/compute/: buffer.h  buffer.inl  command_queue.h  command_queue.inl  context.h  context.inl  device.h  device.inl  event.h  event.inl  kernel.h  kernel.inl  mem.h  mem.inl  object.h  object.inl  parallel.h  parallel.inl  platform.h  platform.inl  program.h  program.inl
TMOCadik08/doc/: report.bib  report.tex
TMOCadik08/resources/images/: C8TZ7768G.tif  C8TZ7768G_corrected.tif  C8TZ7768_out.tif  C8TZ7768_threshold.tif  ballsG.tif  ballsG_corrected.tif  balls_out.tif  balls_threshold.tif
TMOCadik08/resources/kernels/: color2gray.cl  core.cl  morton.cl
TMOChen05/: CMakeLists.txt  TMOChen05.cpp  TMOChen05.h  TMOPlugin.cpp  wasserstein.h
TMOCheryl11/: CMakeLists.txt  Cluster.cpp  Cluster.h  Graph.cpp  Graph.h  TMOCheryl11.cpp  TMOCheryl11.h  TMOPlugin.cpp
TMOCheryl11/optim-master/header_only_version/: optim.hpp
TMOCheryl11/optim-master/header_only_version/constrained/: sumt.hpp
TMOCheryl11/optim-master/header_only_version/line_search/: more_thuente.hpp
TMOCheryl11/optim-master/header_only_version/misc/: determine_bounds_type.hpp  error_reporting.hpp  error_reporting.ipp  jacobian_adjust.hpp  numerical_gradient.hpp  numerical_hessian.hpp  optim_options.hpp  optim_structs.hpp  transform_vals.hpp  unit_vec.ipp
TMOCheryl11/optim-master/header_only_version/unconstrained/: bfgs.hpp  cg.hpp  de.hpp  de_prmm.hpp  gd.hpp  lbfgs.hpp  newton.hpp  nm.hpp  pso.hpp  pso_dv.hpp
TMOCheryl11/optim-master/header_only_version/zeros/: broyden.hpp
TMOCmd/: CMakeLists.txt  TMOCmd.cpp  TMOCmd.dsp  TMOCmd.h  TMOCmd.ncb  TMOCmd.sln  TMOCmd.vcproj  main.cpp  tmocmd
TMOCyriac15/: CMakeLists.txt  TMOCyriac15.cpp  TMOCyriac15.h  TMOPlugin.cpp
TMODrago03/: CMakeLists.txt  TMODrago03.cpp  TMODrago03.h  TMOPlugin.cpp
TMOEfficientC2GConversionForDIInGD/: CMakeLists.txt  TMOEfficientC2GConversionForDIInGD.cpp  TMOEfficientC2GConversionForDIInGD.h  TMOPlugin.cpp
TMOEilertsen15/: CMakeLists.txt  TMOEilertsen15.cpp  TMOEilertsen15.h  TMOPlugin.cpp  TMOPlugin.h
TMOEisemann04/: CMakeLists.txt  TMOEisemann04.cpp  TMOEisemann04.h  TMOEisemann04.sln  TMOEisemann04.vcproj  TMOPlugin.cpp  TMOPlugin.h
TMOFFLS08/: CMakeLists.txt  TMOFFLS08.cpp  TMOFFLS08.h  TMOPlugin.cpp
TMOFarbman08/: CMakeLists.txt  TMOFarbman08.cpp  TMOFarbman08.h  TMOPlugin.cpp
TMOGastal11/: CMakeLists.txt  ColorspaceConverter.cpp  ColorspaceConverter.h  MatUtil.cpp  MatUtil.h  TMOGastal11.cpp  TMOGastal11.h  TMOPlugin.cpp
TMOHafner16/: CMakeLists.txt  TMOHafner16.cpp  TMOHafner16.h  TMOPlugin.cpp
TMOHsin11/: CMakeLists.txt  TMOHsin11.cpp  TMOHsin11.h  TMOPlugin.cpp
TMOHu14/: CMakeLists.txt  TMOHu14.cpp  TMOHu14.h  TMOPlugin.cpp
TMOJah06/: CMakeLists.txt  TMOJah06.cpp  TMOJah06.h  TMOPlugin.cpp
TMOJin14/: CMakeLists.txt  TMOJin14.cpp  TMOJin14.h  TMOPlugin.cpp
TMOJin17/: CMakeLists.txt  TMOJin17.cpp  TMOJin17.h  TMOPlugin.cpp
TMOKhan20/: CMakeLists.txt  TMOKhan20.cpp  TMOKhan20.h  TMOPlugin.cpp  TMOPlugin.h
TMOKim09/: CMakeLists.txt  TMOKim09.cpp  TMOKim09.h  TMOPlugin.h  (+1 more)
(+750 files in other folders)
