CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
FIND_PACKAGE(FFTW REQUIRED)
IF (FFTW_FOUND)
  MESSAGE("FFTW found OK")
ELSE(FFTW_FOUND)
  MESSAGE(FATAL_ERROR "FFTW library not found.")
ENDIF(FFTW_FOUND)

INCLUDE_DIRECTORIES(
${FFTW_INCLUDES}
../tmolib/
.
)

LINK_LIBRARIES (
${FFTW_LIBRARIES}
tmo
)

SET(TMO_SOURCES
 TMOAlsam09.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOAlsam09.h
 TMOPlugin.h
)


add_library( alsam09 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET alsam09 POST_BUILD 
	COMMAND cp -f libalsam09.so ../TMOCmd/alsam09.tml
	COMMAND cp -f libalsam09.so ../TMOgui/alsam09.tml 
	COMMAND cp -f libalsam09.so ../alsam09.tml 
#	COMMAND rm -f libalsam09.so 
	)



