CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMO_SOURCES
 TMOBae06.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOBae06.h
 TMOPlugin.h
)


add_library( Bae06 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET Bae06 POST_BUILD 
	COMMAND cp -f libBae06.so ../TMOCmd/Bae06.tml
	COMMAND cp -f libBae06.so ../TMOgui/Bae06.tml 
	COMMAND cp -f libBae06.so ../Bae06.tml 
#	COMMAND rm -f libBae06.so 
	)


