CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMO_SOURCES
 TMOBiswas05.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOBiswas05.h
 TMOPlugin.h
)


add_library( biswas05 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET biswas05 POST_BUILD 
	COMMAND cp -f libbiswas05.so ../TMOCmd/biswas05.tml
	COMMAND cp -f libbiswas05.so ../TMOgui/biswas05.tml 
	COMMAND cp -f libbiswas05.so ../biswas05.tml 
#	COMMAND rm -f libiswas05.so 
	)


