CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -fPIC")
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
	
IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)


FIND_PACKAGE(OpenCV REQUIRED)
IF(OpenCV_VERSION VERSION_LESS "2.4.9")
  message(FATAL_ERROR "ERROR: Can't find OpenCV 2.4.9+")
ELSE(OpenCV_VERSION VERSION_LESS "2.4.9") 
	MESSAGE("OpenCV found OK")
ENDIF()


INCLUDE_DIRECTORIES(
	../tmolib/
	.
)

LINK_LIBRARIES (
${OpenCV_LIBS}
tmo
)

SET(TMO_SOURCES
 TMOCLAHE.cpp
 TMOPlugin.cpp
 #he.cpp
 clahe.cpp
 #ahewointerpolation.cpp
)

SET(TMOWARD_HEADERS
 TMOCLAHE.h
 TMOPlugin.h
 ##he.h
 clahe.h
 #ahewointerpolation.h
)

add_library( CLAHE SHARED ${TMO_SOURCES} )
 add_custom_command( TARGET CLAHE POST_BUILD 
 	COMMAND cp -f libCLAHE.so ../TMOCmd/CLAHE.tml
 	COMMAND cp -f libCLAHE.so ../TMOgui/CLAHE.tml 
 	COMMAND cp -f libCLAHE.so ../CLAHE.tml 
 #	COMMAND rm -f libCLAHE.so 
  	)



