CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMO_SOURCES
 TMOFFLS08.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOFFLS08.h
 TMOPlugin.h
)


add_library( fFLS08 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET fFLS08 POST_BUILD 
	COMMAND cp -f libfFLS08.so ../TMOCmd/fFLS08.tml
	COMMAND cp -f libfFLS08.so ../TMOgui/fFLS08.tml 
	COMMAND cp -f libfFLS08.so ../fFLS08.tml 
#	COMMAND rm -f libfFLS08.so 
	)


