CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMO_SOURCES
TMOHafner16.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
TMOHafner16.h
 TMOPlugin.h
)


add_library(Hafner16 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET Hafner16 POST_BUILD 
	COMMAND cp -f libHafner16.so ../TMOCmd/Hafner16.tml
	COMMAND cp -f libHafner16.so ../TMOgui/Hafner16.tml 
	COMMAND cp -f libHafner16.so ../Hafner16.tml 
#	COMMAND rm -f libyourOperator.so 
	)


